force-app/main/default/objects/Data_Quality_Job__c/Data_Quality_Job__c.object-meta.xml
<CustomObject>
    <description>Tracks data quality processing jobs using Apex Cursors</description>
    <label>Data Quality Job</label>
    <nameField>
        <displayFormat>DQJ-{0000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Quality Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>