force-app/main/default/objects/Data_Quality_Job__c/fields/Average_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Quality_Score__c</fullName>
    <label>Average Quality Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>