force-app/main/default/objects/Data_Quality_Job__c/fields/Case_Position__c.field-meta.xml
<CustomField>
    <fullName>Case_Position__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Case Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>