force-app/main/default/objects/Data_Quality_Job__c/fields/Cases_Processed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cases Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>