force-app/main/default/objects/Data_Quality_Job__c/fields/Execution_Count__c.field-meta.xml
<CustomField>
    <fullName>Execution_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Execution Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>