force-app/main/default/objects/Data_Quality_Job__c/fields/Issues_Found__c.field-meta.xml
<CustomField>
    <fullName>Issues_Found__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Issues Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>