force-app/main/default/objects/Data_Quality_Job__c/fields/Last_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution_Time__c</fullName>
    <label>Last Execution Time</label>
    <type>DateTime</type>
</CustomField>