force-app/main/default/objects/Data_Quality_Job__c/fields/Opportunity_Position__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Position__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opportunity Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>