force-app/main/default/objects/Data_Quality_Job__c/fields/Processing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Processing_Mode__c</fullName>
    <label>Processing Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>