force-app/main/default/objects/Data_Quality_Job__c/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>