force-app/main/default/objects/Data_Quality_Job__c/fields/Total_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>